--- a/smicerp/pom.xml
+++ b/smicerp/pom.xml
@@ -89,6 +89,18 @@
             <version>2.6.12</version>
         </dependency>
 
+        <!-- POI -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.14</version>
+        </dependency>
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -107,6 +119,8 @@
             <version>1.7.25</version>
             <scope>compile</scope>
         </dependency>
+
+
 
 
         <dependency>
